[project]
name = "spreadsheet-agent"
version = "0.1.0"
description = "An AI agent for Google Sheets, powered by the Google ADK and OpenAI."
readme = "README.md"
authors = [
    { name = "Hiran", email = "94092485+phiran@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "google-adk>=1.4.2",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "structlog>=25.4.0",
]

[project.scripts]
spreadsheet-agent = "spreadsheet_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tools like pre-commit, ruff, and ty can be installed globally with:
# uv tool install pre-commit ruff ty --with pre-commit-uv
# They are also included here for reproducibility and CI.
[dependency-groups]
dev = [
    "hatch>=1.13.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.5.5",
    "ty>=0.0.1a10",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "D",
    "N",
    "ANN",
    "UP",
    "C4",
    "A",
    "S",
    "COM",
    "T10",
    "BLE",
    "PIE",
]
ignore = ["E203", "COM812", "UP007"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["spreadsheet_agent"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.hatch.envs.default.scripts]
# Add project-specific scripts here, e.g.:
# download-db = "python scripts/run_download_db.py"
